# social-media-intel

./: .gitignore  BUILD_PROMPT.md  CLAUDE.md  LICENSE  METHODOLOGY.md  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml  linkedin.yml  refresh.yml
pipeline/: __init__.py  config.py  main.py  models.py
pipeline/eval/: cluster_eval.py  filter_eval.py  score_eval.py
pipeline/eval/fixtures/: labeled_posts.json
pipeline/prompts/: cluster_tag.haiku.md  linkedin_post.md  weekly_synthesis.sonnet.md
pipeline/publishers/: linkedin.py
pipeline/sources/: SOURCES.md  _http.py  devto.py  hackernews.py  lemmy.py  lobsters.py  reddit.py  stackexchange.py
pipeline/stages/: cluster.py  dedupe.py  embed.py  export.py  filter.py  linkedin_image.py  linkedin_post.py  normalize.py  score.py  synthesize.py
site/: index.html  package-lock.json  package.json  tsconfig.json
site/public/: sample-dashboard.json
site/src/: data.ts  echarts-setup.ts  main.ts  styles.css
site/src/render/: drilldown.ts  heatmap.ts  hero.ts  kpi.ts  table.ts  timeseries.ts  treemap.ts
tests/: test_cluster.py  test_dedupe.py  test_embed.py  test_export.py  test_filter.py  test_main.py  test_models.py  test_normalize.py  test_score.py  test_sources_devto.py  test_sources_hackernews.py  test_sources_lemmy.py  test_sources_lobsters.py  test_sources_reddit.py  test_sources_stackexchange.py  test_synthesize.py
