[project]
name = "social-media-intel"
version = "0.1.0"
description = "Weekly software-industry pain-point intelligence pipeline. See BUILD_PROMPT.md."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Priyesh Kumar Pandey" }]
dependencies = [
    "requests>=2.32",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.6",
    "vaderSentiment>=3.3.2",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "pyright>=1.1.350",
]

[project.scripts]
smi = "pipeline.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "pipeline/eval"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers"

[tool.pyright]
include = ["pipeline"]
pythonVersion = "3.11"
reportMissingTypeStubs = false
